--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "next": "15.4.5",
     "react": "19.1.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "19.1.0",
-    "react-datepicker": "^7.3.0"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "@types/react-datepicker": "^6.2.0"
+    "typescript": "^5"
   }
 }
