--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "19.1.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "19.1.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
